src/app/sidebar/sidebar.component.css
.menu-left-side {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  left:1rem;
  width: 17em;
  height: 100vh;
  border-right: 1px solid #D2D2D2;
  background-color: #FFFFFF;
}

.wrapper {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
/* .logo {
  margin-top: 50px;
  margin-left: 15px;
  width: 142px;
  height: 34px;
} */

h1 {
  font-weight: bolder;
}
.taskWord {
  margin-left: 3rem;
  color: #5cb85c;
}

.btn {
  position: relative;
  width: 200px;
  height: 48px;
  top: 48px;
  left: 21px;
  padding: 15px, 0px, 15px, 0px;
  border-radius: 12px;
}

.user {
  width: 244px;
  padding: 9px 14px;
  border-top: 1px;
  gap: 10px;
  margin-top: auto;
}

.list-group-item {
  display: flex;
  margin-bottom: -1px;
  background-color: #fff;
  border: 1px solid #ddd;
  justify-content: center;
  align-items: baseline;
}

.logoutIcon, p {
  margin-left: 5px;
}

.userImg {
  border-radius: 50%;
  height: 100px;
  object-fit: cover;
}

